# parakeet-mlx-fastapi

./: .env.example  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  export_openapi.py  openapi.yaml  pyproject.toml  requirements.txt
.github/workflows/: build-package.yml  docker-image.yml  docker-publish.yml
parakeet_service/: __init__.py  audio.py  batchworker.py  chunker.py  config.py  main.py  model.py  routes.py  schemas.py  stream_routes.py  streaming_vad.py
